# rust_slint_state_bug

./: Cargo.toml
src/: main.rs
ui/: appwindow.slint  example.slint
