[package]
name = "rust-slint-gui2"
version = "0.1.0"
authors = ["JD <jbmdumont@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5.1"   

[build-dependencies]
slint-build = "1.4"
